Made some fixes to layout: - added to header and footer to layout so that it can wrap content in the Box(basically main page content like questions and categories), Thus removing both header and footer from index.tsx - Fixed footer to stay at the bottom of the view port, no matter window size and page content.

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -2,6 +2,10 @@ body {
   margin: 0 !important;
 }
 
+.FooterContainer {
+  margin-top: auto;
+}
+
 .FooterBox {
   display: flex;
   justify-content: space-between;
@@ -12,7 +16,7 @@ body {
 }
 
 .Copyright {
-  padding-left: 50px;
+  padding-left: 120px;
 }
 
 .PrivacyPolicy {
